cedar/test/corpus/examples/tags_n_roles_2.txt
================================================================================
tags_n_roles_2
================================================================================

// Similar to the above policy, but for Role B
@id("Role-B policy")
permit (
  principal in Role::"Role-B",
  action in [Action::"Role-B Actions"],
  resource
)
when
{
  principal.allowedTagsForRole has "Role-B" &&
  (if
     principal.allowedTagsForRole["Role-B"] has production_status
   then
     if
       resource.tags has production_status
     then
       principal.allowedTagsForRole
         [
         "Role-B"
         ]
         .production_status
         .contains
         (
           "ALL"
         ) ||
       resource.tags.production_status.contains("ALL") ||
       principal.allowedTagsForRole
         [
         "Role-B"
         ]
         .production_status
         .containsAll
         (
           resource.tags["production_status"]
         )
     else
       true
   else
     true)
}
when
{
  principal.allowedTagsForRole has "Role-B" &&
  (if
     principal.allowedTagsForRole["Role-B"] has country
   then
     if
       resource.tags has country
     then
       principal.allowedTagsForRole["Role-B"].country.contains("ALL") ||
       resource.tags.country.contains("ALL") ||
       principal.allowedTagsForRole
         [
         "Role-B"
         ]
         .country
         .containsAll
         (
           resource.tags["country"]
         )
     else
       true
   else
     true)
}
when
{
  principal.allowedTagsForRole has "Role-B" &&
  (if
     principal.allowedTagsForRole["Role-B"] has stage
   then
     if
       resource.tags has stage
     then
       principal.allowedTagsForRole["Role-B"].stage.contains("ALL") ||
       resource.tags.stage.contains("ALL") ||
       principal.allowedTagsForRole
         [
         "Role-B"
         ]
         .stage
         .containsAll
         (
           resource.tags["stage"]
         )
     else
       true
   else
     true)
};

--------------------------------------------------------------------------------
(policy_set
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (action
        (scope_constraint
          (entity_list
            (entity_reference
              (identifier)
              (string
                (string_content))))))
      (resource))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (string
                    (string_content)))))
            (relation_expression
              (unary_expression
                (member_expression
                  (parenthesized_expression
                    (expression
                      (if_expression
                        (expression
                          (or_expression
                            (and_expression
                              (relation_expression
                                (unary_expression
                                  (member_expression
                                    (variable)
                                    (field_access
                                      (identifier))
                                    (index_access
                                      (string
                                        (string_content)))))
                                (unary_expression
                                  (member_expression
                                    (identifier)))))))
                        (expression
                          (if_expression
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))))
                                    (unary_expression
                                      (member_expression
                                        (identifier)))))))
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (index_access
                                          (string
                                            (string_content)))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (string
                                                        (string_content)))))))))))))
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (string
                                                        (string_content)))))))))))))
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (index_access
                                          (string
                                            (string_content)))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (variable)
                                                      (field_access
                                                        (identifier))
                                                      (index_access
                                                        (string
                                                          (string_content))))))))))))))))
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (true)))))))))
                        (expression
                          (or_expression
                            (and_expression
                              (relation_expression
                                (unary_expression
                                  (member_expression
                                    (true)))))))))))))))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (string
                    (string_content)))))
            (relation_expression
              (unary_expression
                (member_expression
                  (parenthesized_expression
                    (expression
                      (if_expression
                        (expression
                          (or_expression
                            (and_expression
                              (relation_expression
                                (unary_expression
                                  (member_expression
                                    (variable)
                                    (field_access
                                      (identifier))
                                    (index_access
                                      (string
                                        (string_content)))))
                                (unary_expression
                                  (member_expression
                                    (identifier)))))))
                        (expression
                          (if_expression
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))))
                                    (unary_expression
                                      (member_expression
                                        (identifier)))))))
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (index_access
                                          (string
                                            (string_content)))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (string
                                                        (string_content)))))))))))))
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (string
                                                        (string_content)))))))))))))
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (index_access
                                          (string
                                            (string_content)))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (variable)
                                                      (field_access
                                                        (identifier))
                                                      (index_access
                                                        (string
                                                          (string_content))))))))))))))))
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (true)))))))))
                        (expression
                          (or_expression
                            (and_expression
                              (relation_expression
                                (unary_expression
                                  (member_expression
                                    (true)))))))))))))))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (string
                    (string_content)))))
            (relation_expression
              (unary_expression
                (member_expression
                  (parenthesized_expression
                    (expression
                      (if_expression
                        (expression
                          (or_expression
                            (and_expression
                              (relation_expression
                                (unary_expression
                                  (member_expression
                                    (variable)
                                    (field_access
                                      (identifier))
                                    (index_access
                                      (string
                                        (string_content)))))
                                (unary_expression
                                  (member_expression
                                    (identifier)))))))
                        (expression
                          (if_expression
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))))
                                    (unary_expression
                                      (member_expression
                                        (identifier)))))))
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (index_access
                                          (string
                                            (string_content)))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (string
                                                        (string_content)))))))))))))
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (string
                                                        (string_content)))))))))))))
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (variable)
                                        (field_access
                                          (identifier))
                                        (index_access
                                          (string
                                            (string_content)))
                                        (field_access
                                          (identifier))
                                        (method_call
                                          (identifier)
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (relation_expression
                                                  (unary_expression
                                                    (member_expression
                                                      (variable)
                                                      (field_access
                                                        (identifier))
                                                      (index_access
                                                        (string
                                                          (string_content))))))))))))))))
                            (expression
                              (or_expression
                                (and_expression
                                  (relation_expression
                                    (unary_expression
                                      (member_expression
                                        (true)))))))))
                        (expression
                          (or_expression
                            (and_expression
                              (relation_expression
                                (unary_expression
                                  (member_expression
                                    (true)))))))))))))))))))
