cedar/test/corpus/prism/datetime_1.txt
================================================================================
datetime_1
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/datetime.cedar#L1-L11

// datetime(), offset, durationSince, toDate, toTime
// duration(), toMilliseconds, toSeconds, toMinutes, toHours, toDays
// see https://github.com/cedar-policy/rfcs/blob/main/text/0080-datetime-extension.md
permit (principal, action, resource)
when
{
  datetime("2024-08-21T") == datetime("2024-08-21T00:00:00.000Z") && duration("1d2h3m4s5ms").toSeconds() == 0 &&
  datetime("2024-08-21T") == datetime("2024-08-21T23:59:59.999Z").toDate() && 
  datetime("2024-08-21T").offset(duration("1d")) == datetime("2024-08-22T") &&
  datetime("2024-08-21T").toTime() == datetime("2024-08-21T").durationSince(datetime("2024-08-21T").toDate())
};

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (comment)
  (comment)
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content)))))))))))
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content))))))))))))
            (relation_expression
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content)))))))))
                  (method_call
                    (identifier))))
              (unary_expression
                (member_expression
                  (integer))))
            (relation_expression
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content)))))))))))
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content)))))))))
                  (method_call
                    (identifier)))))
            (relation_expression
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content)))))))))
                  (method_call
                    (identifier)
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (extension_call
                                  (name
                                    (identifier))
                                  (expression
                                    (or_expression
                                      (and_expression
                                        (relation_expression
                                          (unary_expression
                                            (member_expression
                                              (string
                                                (string_content))))))))))))))))))
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content))))))))))))
            (relation_expression
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content)))))))))
                  (method_call
                    (identifier))))
              (unary_expression
                (member_expression
                  (extension_call
                    (name
                      (identifier))
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (string
                                  (string_content)))))))))
                  (method_call
                    (identifier)
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (extension_call
                                  (name
                                    (identifier))
                                  (expression
                                    (or_expression
                                      (and_expression
                                        (relation_expression
                                          (unary_expression
                                            (member_expression
                                              (string
                                                (string_content)))))))))
                                (method_call
                                  (identifier))))))))))))))))))
