cedar/test/corpus/prism/datetime_2.txt
================================================================================
datetime_2
================================================================================

permit (principal, action, resource)
when
{
  duration("1d").toDays() * 24 == duration("1d").toHours() &&
  duration("1h").toHours() * 60 == duration("1h").toMinutes() &&
  duration("1m").toMinutes() * 60 == duration("1m").toSeconds() &&
  duration("1s").toSeconds() * 1000 == duration("1s").toMilliseconds() &&
  duration("1ms").toMilliseconds() == 1
};
